--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     {% if articles %}
 
-            <table>
+            <table class="table table-hover">
                 <thead>
                     <th>Articel Title</th>
                     <th>Actions</th>
@@ -13,8 +13,8 @@
                 <tbody>
                     {% for article in articles %}
                         <tr>
-                            <td>{{ article }}</td>
-                            <td><a href="/article/1" class="btn btn-dark">Show</a></td>
+                            <td>{{ article.title }}</td>
+                            <td><a href="/article/{{ article.id }}" class="btn btn-dark">Show</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
