--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     {% if articles %}
 
-            <table class="table table-hover">
+            <table id="articles" class="table table-hover">
                 <thead>
                     <th>Articel Title</th>
                     <th>Actions</th>
@@ -15,6 +15,8 @@
                         <tr>
                             <td>{{ article.title }}</td>
                             <td><a href="/article/{{ article.id }}" class="btn btn-dark">Show</a></td>
+                            <td><a href="/article/edit/{{ article.id }}" class="btn btn-light">Edit</a></td>
+                            <td><a href="#" class="btn btn-danger delete-article" data-id="{{ article.id }}">Delete</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
@@ -23,3 +25,7 @@
         <p>No article to display</p>
     {% endif %}
 {% endblock %}
+
+{% block javascripts %}
+    <script src="js/main.js"></script>
+{%  endblock %}
