--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="mobile-nav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="/artilse/new" class="nav-link">New Article</a></li>
+                <li class="nav-item"><a href="/article/new" class="nav-link">New Article</a></li>
             </ul>
         </div>
     </div>
